tests/fails/niltype2.t
if not require("fail") then return end


terra bar()
	var a : A
end

bar:compile()
